# spec2cov-dataset-generation-for-DV

./: README.md  pyproject.toml
config/: default.yaml
src/spec2cov/: cli.py  config.py  logging_utils.py
src/spec2cov/db/: repository.py  schema.py
src/spec2cov/exporters/: agentic.py  non_agentic.py
src/spec2cov/filtering/: dedup.py  keyword_filter.py
src/spec2cov/parsing/: doc_extractors.py  sv_pyverilog.py
src/spec2cov/quality/: gates.py
src/spec2cov/sources/: bigquery_discovery.py  github_discovery.py  github_fetcher.py
src/spec2cov/stages/: export_jsonl.py  fetch_filter.py  gen_retrieve.py  init_db.py  preprocess.py
tests/: test_config.py  test_cover_keyword_extraction.py  test_dedup.py  test_doc_extractors.py  test_exporters.py  test_fetch_filter_pdf_binary.py  test_gen_retrieve.py  test_github_discovery.py  test_github_rate_limit.py  test_keyword_filter.py  test_preprocess_pdf_behavior.py  test_preprocess_project_clustering.py  test_quality_gates.py
